# ergo-vanitygen-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cargo.toml
.github/workflows/: release.yml
src/: address_processor.rs  args.rs  estimator.rs  gui.rs  main.rs  matcher.rs  paper_wallet.rs  progress.rs  utils.rs
src/crypto/: mod.rs
