[package]
name = "ergo-vanitygen"
version = "1.1.0"
edition = "2021"
authors = ["arkadianet"]
description = "A high-performance vanity address generator for Ergo blockchain"
license = "MIT"
repository = "https://github.com/arkadianet/ergo-vanitygen"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols from binary

[dependencies]
clap = { version = "4.4", features = ["derive"] }
bip39 = "2.1"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["parallel"] }
sha2 = "0.10"
unicode-normalization = "0.1"
ergo-lib = { version = "0.28", features = ["mnemonic_gen"] }
rand = "0.8"
rayon = "1.8"
indicatif = "0.17"
num_cpus = "1.16"
bs58 = "0.4"
# GUI dependencies
egui = "0.25"
eframe = "0.25"
poll-promise = "0.3"
chrono = "0.4"
rfd = "0.12"
qrcode = "0.14.1"

[features]
default = ["gui"]
gui = []
