[package]
name = "ergo-vanitygen"
version = "2.0.0"
edition = "2021"
authors = ["arkadianet"]
description = "A high-performance vanity address generator for Ergo blockchain"
license = "MIT"
repository = "https://github.com/arkadianet/ergo-vanitygen"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols from binary

[dependencies]
clap = { version = "4.4", features = ["derive"] }
bip39 = "2.1"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["parallel"] }
unicode-normalization = "0.1"
ergo-lib = { version = "0.28", features = ["mnemonic_gen"] }
rand = "0.8"
rayon = "1.8"
indicatif = "0.17"
num_cpus = "1.16"
bs58 = "0.4"
lazy_static = "1.4"
ctrlc = "3.4"
# GUI dependencies
egui = "0.25"
eframe = "0.25"
poll-promise = "0.3"
chrono = "0.4"
rfd = "0.12"
qrcode = "0.14.1"
# Security dependencies
rpassword = "7.2"
arboard = { version = "3.2", optional = true }
zeroize = "1.6"
winapi = { version = "0.3", features = ["winuser"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
sha2 = { version = "0.10", default-features = true }

[target.'cfg(not(windows))'.dependencies]
sha2 = { version = "0.10", features = ["asm", "compress"] }

[features]
default = ["gui", "clipboard", "hw_accel"]
gui = []
clipboard = ["dep:arboard"]
hw_accel = []  # Feature flag for hardware acceleration
